--- a/dmon.ipynb
+++ b/dmon.ipynb
@@ -1605,7 +1605,7 @@
     }
    ],
    "source": [
-    "# The diagram is really readable due to variable ranges for different metrics.\n",
+    "# The diagram is not really readable due to variable ranges for different metrics.\n",
     "# But it provides the list of metrics\n",
     "plot_dmon(\"dmon.csv\")"
    ]
